--- a/arch/arm64/configs/d8g_defconfig
+++ b/arch/arm64/configs/d8g_defconfig
@@ -689,6 +689,7 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_GAME=y
 CONFIG_CPU_FREQ_GOV_GAME_PRO=y
+CONFIG_CPU_FREQ_GOV_WALT=y
 CONFIG_CPU_INPUT_BOOST=y
 CONFIG_INPUT_BOOST_DURATION_MS=64
 CONFIG_INPUT_BOOST_FREQ_LP=748800
